--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
 
     <div id="timeDate" class="time-date"></div>
 
-    <div id="weatherInfo" class="weather-info">
-      <!-- Current weather appears here -->
-    </div>
+    <div id="weatherInfo" class="weather-info"></div>
 
-    <div id="forecast" class="forecast">
-      <!-- 5-day forecast appears here -->
-    </div>
+    <div id="forecast" class="forecast"></div>
   </div>
   <div id="weatherAnimation" class="weather-animation"></div>
 
